# SFML-ECS-Game

./: .gitignore  CMakeLists.txt
Engine/: Engine.cpp  Engine.h  GameStateStack.h
Engine/Audio/: MusicManager.cpp  MusicManager.h  SoundManager.cpp  SoundManager.h
Engine/GameState/: SystemScheduler.h
Engine/Input/: InputManager.cpp  MouseManager.cpp  MouseManager.h
Game/: EntityFactory.h  Game.cpp  Game.h  main.cpp
Game/Components/: Components.h  Gameplay.h  Render.h  Tags.h  Tilemap.h  Tools.h  Transform.h  Ui.h
Game/Entities/: Entities.h  EntityFactory.h  GameEntitiesFactory.h  MapFactory.h  UiFactory.h
Game/Pathfinding/: Pathfinding.cpp
Game/Systems/: AnimalGenerationSystem.h  AnimalMovementSystem.h  BackgroundMusicSystem.h  BuildTileMapSystem.h  CameraSystem.h  CancelOrderSystem.h  ChopOrderSystem.h  CleanupSystem.h  ColonistGenerationSystem.h  HarvestOrderSystem.h  InputSystem.h  MineOrderSystem.h  MouseSelectionSystem.h  MouseSystem.h  PathDrawSystem.h  PathFollowSystem.h  PauseInputSystem.h  RenderSystem.h  SelectionRenderSystem.h  SetColonistPathSystem.h  StoneGenerationSystem.h  TerrainGenerationSystem.h  TileMapRenderSystem.h  TitleScreenMusicSystem.h  UiEventSystem.h  UiMainMenuShowSystem.h  UiPauseMenuShowSystem.h  UiRenderSystem.h  VegetationGenerationSystem.h
Game/World/: Tile.h  WorldMap.h
assets/shaders/: tilemap.frag
engine/: Engine.cpp  Engine.h  Input.h  MusicManager.cpp  Resources.h  SoundManager.cpp  SoundManager.h  SystemScheduler.h  TextureManager.cpp  TextureManager.h
engine/Input/: InputManager.h
engine/Pathfinding/: Pathfinding.cpp  Pathfinding.h
engine/audio/: musicManager.cpp  musicManager.h
engine/core/: IGame.h  engine.cpp  engine.h
engine/graphics/: tileMap.h
engine/gui/: guiManager.cpp  guiManager.h
engine/input/: inputManager.h
game/: AStar.h  EntityFactory.h  Game.cpp  Game.h  Prefabs.h  TileMap.h  entityBuilder.h  entityFactory.cpp  entityFactory.h  game.cpp  game.h  gameHUD.cpp  gameHUD.h  main.cpp  testView.cpp  testView.h
game/Pathfinding/: Pathfinding.cpp
game/World/: WorldMap.h
game/components/: Components.h
game/systems/: AnimalGenerationSystem.h  AnimalMovementSystem.h  BackgroundMusicSystem.h  BuildTileMapSystem.h  CameraSystem.h  (+24 more)
src/:   main.cpp  engine.cpp  engine.h  engineConfig.h  engineContext.h  entityBuilder.cpp  entityBuilder.h  entityFactory.cpp  entityFactory.h  game.cpp  game.h  main.cpp  mainScene.cpp  mainScene.h  prefabFactory.cpp  scene.h  tileMap.cpp  tileMap.h
(+107 files in other folders)
